--- a/02-Python Statements/07-Statements Assessment Test.ipynb
+++ b/02-Python Statements/07-Statements Assessment Test.ipynb
@@ -48,7 +48,11 @@
    },
    "outputs": [],
    "source": [
-    "#Code here"
+    "st_list = st.split()\n",
+    "\n",
+    "for word in st_list:\n",
+    "  if word[0]=='s':\n",
+    "    print (word)"
    ]
   },
   {
@@ -67,7 +71,9 @@
    },
    "outputs": [],
    "source": [
-    "#Code Here"
+    "for num in range(0,11):\n",
+    "  if num%2==0:\n",
+    "    print(num)"
    ]
   },
   {
@@ -85,10 +91,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "#Code in this cell\n",
-    "[]"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -117,7 +120,11 @@
    },
    "outputs": [],
    "source": [
-    "#Code in this cell"
+    "st_list = st.split()\n",
+    "\n",
+    "for word in st_list:\n",
+    "  if len(word)%2==0:\n",
+    "    print(word)s cell"
    ]
   },
   {
@@ -136,7 +143,15 @@
    },
    "outputs": [],
    "source": [
-    "#Code in this cell"
+    "for num in range (1,101):\n",
+    "  if num%3 == 0 and num % 5 == 0:\n",
+    "    print(\"FizzBuzz\")\n",
+    "  elif num%3 == 0:\n",
+    "    print (\"Fizz\")\n",
+    "  elif num%5 == 0:\n",
+    "    print(\"Buzz\")\n",
+    "  else:\n",
+    "    print (num)his cell"
    ]
   },
   {
@@ -166,7 +181,10 @@
    },
    "outputs": [],
    "source": [
-    "#Code in this cell"
+    "st_list = st.split()\n",
+    "\n",
+    "for char in st_list:\n",
+    "  print (char[0])"
    ]
   },
   {
