--- a/02-Python Statements/07-Statements Assessment Test.ipynb
+++ b/02-Python Statements/07-Statements Assessment Test.ipynb
@@ -48,9 +48,7 @@
    },
    "outputs": [],
    "source": [
-    "st_list = st.split()\n",
-    "\n",
-    "for word in st_list:\n",
+    "for word in st.split():\n",
     "  if word[0]=='s':\n",
     "    print (word)"
    ]
@@ -120,9 +118,7 @@
    },
    "outputs": [],
    "source": [
-    "st_list = st.split()\n",
-    "\n",
-    "for word in st_list:\n",
+    "for word in st.split():\n",
     "  if len(word)%2==0:\n",
     "    print(word)s cell"
    ]
@@ -181,10 +177,8 @@
    },
    "outputs": [],
    "source": [
-    "st_list = st.split()\n",
-    "\n",
-    "for char in st_list:\n",
-    "  print (char[0])"
+    "for first_letter in st.split():\n",
+    "  print (first_letter[0])"
    ]
   },
   {
